Fix alignment also on smaller resolution

--- a/app/assets/stylesheets/layouts/sites/_edit.css.sass
+++ b/app/assets/stylesheets/layouts/sites/_edit.css.sass
@@ -32,7 +32,7 @@
         font-size: 0.85em
       
     .button-wrapper
-      vertical-align: middle !important
+      vertical-align: top !important
 
   .button-wrapper
     vertical-align: super !important
